--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jordi Cervero — Industrial Operations & Safety Consulting</title>
     <meta name="description"
         content="Senior consultant in industrial operations, occupational safety and process safety across Europe. Strategy, audits, risk analysis and implementation.">
-    <meta property="og:title" content="Jordi Cervero — Industrial Operations & Safety Consulting">
+    <meta property="og:title" content="Jordi Cervero Ruiz — Industrial Operations & Safety Consulting">
     <meta property="og:description"
         content="Senior consultant in industrial operations, occupational safety and process safety across Europe.">
     <meta property="og:type" content="website">
