--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <li class="nav-item"><a class="nav-link" href="#approach">Approach</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="btn btn-sm btn-primary ms-lg-2"
-                            href="mailto:hello@jordicervero.com?subject=Consulting%20Inquiry">Work with Jordi</a></li>
+                            href="mailto:jordicerveroruiz@gmail.com?subject=Consulting%20Inquiry">Work with Jordi</a>
+                    </li>
                 </ul>
             </nav>
         </div>
