book a discovery call change

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                             to finished goods.</p>
                         <div class="d-flex gap-3 flex-wrap">
                             <a class="btn btn-primary btn-lg"
-                                href="mailto:hello@jordicervero.com?subject=Discovery%20Call">Book a discovery call</a>
+                                href="mailto:jordicerveroruiz@gmail.com?subject=Discovery%20Call">Book a discovery
+                                call</a>
                             <a class="btn btn-outline-secondary btn-lg" href="#services">Explore specializations</a>
                         </div>
                         <ul class="list-inline mt-4 small text-muted">
