--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header class="navbar navbar-expand-lg navbar-light bg-surface border-bottom sticky-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="/">JC Consulting</a>
+            <a class="navbar-brand fw-bold" href="/">JC Industrial Operations Consulting</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
                 aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
