--- a/occupational-safety.html
+++ b/occupational-safety.html
@@ -18,7 +18,7 @@
 <body>
     <header class="navbar navbar-expand-lg navbar-light bg-surface border-bottom sticky-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="/">JC Consulting</a>
+            <a class="navbar-brand fw-bold" href="/">JC Industrial Operations Consulting</a>
         </div>
     </header>
 
