email change again

--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
                 <div class="p-5 rounded-4 bg-gradient-primary text-white">
                     <h2 class="h1 mb-3">Ready to accelerate performance and safety?</h2>
                     <p class="lead mb-4">Let’s start with a 30-minute call to understand your goals and constraints.</p>
-                    <a class="btn btn-light btn-lg" href="mailto:hello@jordicervero.com?subject=Discovery%20Call">Book a
+                    <a class="btn btn-light btn-lg"
+                        href="mailto:jordicerveroruiz@gmail.com?subject=Discovery%20Call">Book a
                         discovery call</a>
                 </div>
             </div>
@@ -249,7 +250,7 @@
                 <ul class="list-inline mb-0 small">
                     <li class="list-inline-item"><a href="#services">Services</a></li>
                     <li class="list-inline-item"><a href="#about">About</a></li>
-                    <li class="list-inline-item"><a href="mailto:hello@jordicervero.com">Contact</a></li>
+                    <li class="list-inline-item"><a href="mailto:jordicerveroruiz@gmail.com">Contact</a></li>
                 </ul>
             </nav>
         </div>
