--- a/operations.html
+++ b/operations.html
@@ -75,7 +75,7 @@
                         </ul>
 
                         <h2 class="h3 mt-4">Get started</h2>
-                        <p>Email <a href="mailto:hello@jordicervero.com">hello@jordicervero.com</a> or use WhatsApp.</p>
+                        <p>Email <a href="mailto:jordicerveroruiz@gmail.com">email to Jordi</a> or use WhatsApp.</p>
                     </div>
                     <aside class="col-lg-4">
                         <div class="card bg-surface border-0 shadow-sm">
