--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
             <div class="container">
                 <div class="text-center mb-5">
                     <h2 class="h1">Specializations</h2>
-                    <p class="text-muted">Deep expertise tailored to small and mid-sized industrial companies across
+                    <p class="text-muted">30 years of experience and deep expertise tailored to small and mid-sized
+                        industrial companies across
                         Europe.</p>
                 </div>
                 <div class="row g-4">
