--- a/occupational-safety.html
+++ b/occupational-safety.html
@@ -1,105 +1,222 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Occupational Safety Consulting — Jordi Cervero</title>
-    <meta name="description"
-        content="Workplace health & safety for SMEs: risk assessments, hygiene, ergonomics and psychosocial risk programs aligned with ISO 45001.">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/theme.css">
-</head>
+    <meta
+      name="description"
+      content="Workplace health & safety for SMEs: risk assessments, hygiene, ergonomics and psychosocial risk programs aligned with ISO 45001."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/assets/css/theme.css" />
+  </head>
 
-<body>
-    <header class="navbar navbar-expand-lg navbar-light bg-surface border-bottom sticky-top">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="/">JC Industrial Operations Consulting</a>
-        </div>
+  <body>
+    <header
+      class="navbar navbar-expand-lg navbar-light bg-surface border-bottom sticky-top"
+    >
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="/"
+          >JC Industrial Operations Consulting</a
+        >
+      </div>
     </header>
 
     <main id="main">
-        <section class="py-5 hero-sub">
-            <div class="container">
-                <h1 class="display-6 fw-bold">Occupational Safety</h1>
-                <p class="lead mb-0">Reliable health & safety systems that reduce incidents and support employee
-                    wellbeing.</p>
+      <section class="py-5 hero-sub">
+        <div class="container">
+          <h1 class="display-6 fw-bold">Occupational Safety</h1>
+          <p class="lead mb-0">
+            Reliable health & safety systems that reduce incidents and support
+            employee wellbeing.
+          </p>
+        </div>
+      </section>
+
+      <section class="py-5">
+        <div class="container">
+          <div class="row g-4">
+            <div class="col-lg-8">
+              <h2 class="h3">What companies need now</h2>
+              <ul>
+                <li>
+                  ISO 45001-aligned H&S management systems with clear
+                  responsibilities and competencies.
+                </li>
+                <li>
+                  Evidence-based risk assessments (industrial safety, hygiene,
+                  ergonomics, psychosocial).
+                </li>
+                <li>
+                  Contractor and visitor management with permit-to-work and
+                  induction processes.
+                </li>
+                <li>
+                  Incident investigation and learning (root cause,
+                  corrective/preventive actions).
+                </li>
+                <li>
+                  Meaningful KPIs: leading and lagging indicators, safety
+                  culture surveys, supervision quality.
+                </li>
+              </ul>
+
+              <h2 class="h3 mt-4">How I help</h2>
+              <ul>
+                <li>
+                  Site-wide risk assessments and action plans with the hierarchy
+                  of controls.
+                </li>
+                <li>
+                  Industrial hygiene programs (exposure assessments,
+                  ventilation, PPE selection and training).
+                </li>
+                <li>Ergonomics reviews and job design to reduce MSD risks.</li>
+                <li>
+                  Psychosocial risk evaluation and practical interventions.
+                </li>
+                <li>
+                  Training: safety leadership, toolbox talks, incident
+                  investigation.
+                </li>
+              </ul>
+
+              <h2 class="h3 mt-4">Deliverables</h2>
+              <ul>
+                <li>H&S manual, procedures and templates.</li>
+                <li>Risk register and prioritized action plan.</li>
+                <li>Training materials and audit checklist.</li>
+              </ul>
+
+              <h2 class="h3 mt-4">Get started</h2>
+              <p>
+                Email
+                <a href="mailto:jordicerveroruiz@gmail.com">email to Jordi</a>
+                or use WhatsApp.
+              </p>
             </div>
-        </section>
-
-        <section class="py-5">
-            <div class="container">
-                <div class="row g-4">
-                    <div class="col-lg-8">
-                        <h2 class="h3">What companies need now</h2>
-                        <ul>
-                            <li>ISO 45001-aligned H&S management systems with clear responsibilities and competencies.
-                            </li>
-                            <li>Evidence-based risk assessments (industrial safety, hygiene, ergonomics, psychosocial).
-                            </li>
-                            <li>Contractor and visitor management with permit-to-work and induction processes.</li>
-                            <li>Incident investigation and learning (root cause, corrective/preventive actions).</li>
-                            <li>Meaningful KPIs: leading and lagging indicators, safety culture surveys, supervision
-                                quality.</li>
-                        </ul>
-
-                        <h2 class="h3 mt-4">How I help</h2>
-                        <ul>
-                            <li>Site-wide risk assessments and action plans with the hierarchy of controls.</li>
-                            <li>Industrial hygiene programs (exposure assessments, ventilation, PPE selection and
-                                training).</li>
-                            <li>Ergonomics reviews and job design to reduce MSD risks.</li>
-                            <li>Psychosocial risk evaluation and practical interventions.</li>
-                            <li>Training: safety leadership, toolbox talks, incident investigation.</li>
-                        </ul>
-
-                        <h2 class="h3 mt-4">Deliverables</h2>
-                        <ul>
-                            <li>H&S manual, procedures and templates.</li>
-                            <li>Risk register and prioritized action plan.</li>
-                            <li>Training materials and audit checklist.</li>
-                        </ul>
-
-                        <h2 class="h3 mt-4">Get started</h2>
-                        <p>Email <a href="mailto:jordicerveroruiz@gmail.com">email to Jordi</a> or use WhatsApp.</p>
-                    </div>
-                    <aside class="col-lg-4">
-                        <div class="card bg-surface border-0 shadow-sm">
-                            <div class="card-body">
-                                <h3 class="h6">Quick facts</h3>
-                                <ul class="small mb-0">
-                                    <li>Programs aligned with ISO 45001</li>
-                                    <li>Focus on SMEs and mid-cap organizations</li>
-                                    <li>Practical training and coaching</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </aside>
+            <aside class="col-lg-4">
+              <div class="card bg-surface border-0 shadow-sm">
+                <div class="card-body">
+                  <h3 class="h6">Quick facts</h3>
+                  <ul class="small mb-0">
+                    <li>Programs aligned with ISO 45001</li>
+                    <li>Focus on SMEs and mid-cap organizations</li>
+                    <li>Practical training and coaching</li>
+                  </ul>
                 </div>
-            </div>
-        </section>
+              </div>
+            </aside>
+          </div>
+        </div>
+      </section>
 
-        <section class="py-4 text-center">
-            <a class="btn btn-primary" href="/">← Back to Home</a>
-        </section>
+      <section class="py-4 text-center">
+        <a class="btn btn-primary" href="/">← Back to Home</a>
+      </section>
     </main>
 
-    <a class="whatsapp-fab" href="https://wa.me/34617213955" target="_blank" rel="noopener"
-        aria-label="Chat on WhatsApp">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="28" height="28" aria-hidden="true">
-            <path fill="#25D366"
-                d="M19.11 17.2c-.27-.14-1.58-.78-1.82-.86-.24-.09-.42-.14-.6.14-.18.27-.69.86-.85 1.03-.16.18-.31.2-.58.07-.27-.14-1.13-.42-2.15-1.34-.79-.7-1.32-1.56-1.48-1.82-.16-.27-.02-.42.12-.56.12-.12.27-.31.4-.47.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.47-.07-.14-.6-1.45-.82-1.98-.22-.53-.45-.45-.6-.45h-.51c-.18 0-.47.07-.72.34-.24.27-.94.92-.94 2.25s.96 2.61 1.09 2.79c.14.18 1.89 2.89 4.6 4.05.64.28 1.14.45 1.53.58.64.2 1.22.17 1.68.1.51-.08 1.58-.65 1.8-1.29.22-.64.22-1.19.15-1.29-.07-.09-.24-.16-.51-.29z" />
-            <path fill="#25D366"
-                d="M16 3C9.37 3 4 8.37 4 15c0 2.15.57 4.17 1.57 5.93L4 29l8.27-1.52C14.02 28.43 15 28.5 16 28.5 22.63 28.5 28 23.13 28 16.5S22.63 3 16 3zm0 23.5c-.9 0-1.78-.12-2.6-.36l-.19-.06-4.86.89.93-4.75-.1-.2A9.47 9.47 0 0 1 6.5 15c0-5.23 4.27-9.5 9.5-9.5s9.5 4.27 9.5 9.5-4.27 9.5-9.5 9.5z" />
-        </svg>
+    <a
+      class="whatsapp-fab"
+      href="https://wa.me/34617213955"
+      target="_blank"
+      rel="noopener"
+      aria-label="Chat on WhatsApp"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 32 32"
+        width="28"
+        height="28"
+        aria-hidden="true"
+      >
+        <path
+          fill="#25D366"
+          d="M19.11 17.2c-.27-.14-1.58-.78-1.82-.86-.24-.09-.42-.14-.6.14-.18.27-.69.86-.85 1.03-.16.18-.31.2-.58.07-.27-.14-1.13-.42-2.15-1.34-.79-.7-1.32-1.56-1.48-1.82-.16-.27-.02-.42.12-.56.12-.12.27-.31.4-.47.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.47-.07-.14-.6-1.45-.82-1.98-.22-.53-.45-.45-.6-.45h-.51c-.18 0-.47.07-.72.34-.24.27-.94.92-.94 2.25s.96 2.61 1.09 2.79c.14.18 1.89 2.89 4.6 4.05.64.28 1.14.45 1.53.58.64.2 1.22.17 1.68.1.51-.08 1.58-.65 1.8-1.29.22-.64.22-1.19.15-1.29-.07-.09-.24-.16-.51-.29z"
+        />
+        <path
+          fill="#25D366"
+          d="M16 3C9.37 3 4 8.37 4 15c0 2.15.57 4.17 1.57 5.93L4 29l8.27-1.52C14.02 28.43 15 28.5 16 28.5 22.63 28.5 28 23.13 28 16.5S22.63 3 16 3zm0 23.5c-.9 0-1.78-.12-2.6-.36l-.19-.06-4.86.89.93-4.75-.1-.2A9.47 9.47 0 0 1 6.5 15c0-5.23 4.27-9.5 9.5-9.5s9.5 4.27 9.5 9.5-4.27 9.5-9.5 9.5z"
+        />
+      </svg>
     </a>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
 
+    <!-- [INICIO] Chatbot widget -->
+    <button
+      class="chatbot-fab"
+      id="chatbotToggle"
+      aria-haspopup="dialog"
+      aria-controls="chatbotPanel"
+      aria-expanded="false"
+    >
+      <span class="visually-hidden">Open chat</span> 💬
+    </button>
+
+    <div
+      class="chatbot-panel"
+      id="chatbotPanel"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="chatbotTitle"
+      hidden
+    >
+      <div class="chatbot-header">
+        <h2 id="chatbotTitle" class="h6 mb-0">Ask Jordi's Assistant</h2>
+        <button
+          class="btn btn-sm btn-outline-secondary"
+          id="chatbotClose"
+          aria-label="Close chat"
+        >
+          ✕
+        </button>
+      </div>
+      <div class="chatbot-body" id="chatbotMessages" aria-live="polite">
+        <div class="bot msg">
+          Hi! I’m Jordi’s assistant. Ask me about operations, occupational or
+          process safety. I’ll reply in one concise paragraph.
+        </div>
+      </div>
+      <form class="chatbot-form" id="chatbotForm" novalidate>
+        <label for="chatbotInput" class="visually-hidden">Your question</label>
+        <input
+          id="chatbotInput"
+          class="form-control"
+          name="q"
+          type="text"
+          placeholder="Type your question…"
+          required
+          minlength="5"
+          maxlength="500"
+          autocomplete="off"
+        />
+        <button
+          class="btn btn-primary"
+          type="submit"
+          id="chatbotSend"
+          aria-label="Send"
+        >
+          Send
+        </button>
+      </form>
+    </div>
+
+    <script src="/assets/js/chatbot.js" type="module"></script>
+    <!-- [FIN] Chatbot widget -->
+  </body>
 </html>
