--- a/operations.html
+++ b/operations.html
@@ -199,7 +199,9 @@
       hidden
     >
       <div class="chatbot-header">
-        <h2 id="chatbotTitle" class="h6 mb-0">Ask Jordi's Assistant</h2>
+        <h2 id="chatbotTitle" class="h6 mb-0">
+          Try the OPS and Safety Assistant
+        </h2>
         <button
           class="btn btn-sm btn-outline-secondary"
           id="chatbotClose"
@@ -210,7 +212,7 @@
       </div>
       <div class="chatbot-body" id="chatbotMessages" aria-live="polite">
         <div class="bot msg">
-          Hi! I’m Jordi’s assistant. Ask me about operations, occupational or
+          Hi! Try the assistant. Ask me about operations, occupational or
           process safety. I’ll reply in one concise paragraph.
         </div>
       </div>
