chatbot css improvements

--- a/process-safety.html
+++ b/process-safety.html
@@ -194,7 +194,7 @@
           id="chatbotClose"
           aria-label="Close chat"
         >
-          ✕
+          CLOSE
         </button>
       </div>
       <div class="chatbot-body" id="chatbotMessages" aria-live="polite">
