--- a/occupational-safety.html
+++ b/occupational-safety.html
@@ -185,7 +185,7 @@
           id="chatbotClose"
           aria-label="Close chat"
         >
-          ✕
+          CLOSE
         </button>
       </div>
       <div class="chatbot-body" id="chatbotMessages" aria-live="polite">
