--- a/operations.html
+++ b/operations.html
@@ -207,7 +207,7 @@
           id="chatbotClose"
           aria-label="Close chat"
         >
-          ✕
+          CLOSE
         </button>
       </div>
       <div class="chatbot-body" id="chatbotMessages" aria-live="polite">
